--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,12 +13,12 @@ dependencies:
   flutter: 
     git: https://github.com/mpflutter/flutter
   json_patch: ^2.1.0
-  vm_service_lib: ^0.3.5
-  watcher: ^0.9.7
-  glob: ^1.1.3
-  mime_type: ^0.3.2
+  vm_service: ^6.2.0
+  watcher: ^1.0.0
+  glob: ^2.0.1
+  mime_type: ^1.0.0
   path: ^1.8.0
 
 dependency_overrides:
   flutter: 
-    git: https://github.com/mpflutter/flutter
+    path: /Users/saiakirahui/Documents/mpflutter/flutter
