--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,4 +21,4 @@ dependencies:
 
 dependency_overrides:
   flutter: 
-    path: /Users/saiakirahui/Documents/mpflutter/flutter
+    git: https://github.com/mpflutter/flutter
